--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+/* Container Styling */
+.Container{
+  position: relative; 
+  background-size: cover;
+
+  width: 50%;
+  height: 60%;
+
+  box-shadow: 1px 2px 2px #4066cc;
+  /* border: 0.1em solid #174bb9; */
+  border-radius: 0.5em;
+
+  background-image: url('./bromo.jpg'); 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* Form Side of Container */
+.form-side{
+  position: absolute;
+  z-index: 1;
+  right: 0;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+  border: 0.1em solid #174bb9;
+  border-radius: 0.5em;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  width: 65%;
+  height: 100%;
 
-.App-link {
-  color: #61dafb;
-}
+  background-color: #EEFCF8;
+  opacity: 1;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-weight: bold;
+  color: #035E7B;
+
+  transition: 2s;
 }
