update css button

--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,16 @@ input {
   border: 1px solid #035E7B;
   border-radius: 5em;
 }
+
+button {
+  padding: 1em;
+
+  border: 1px solid #EEFCF8;
+  border-radius: 5em;
+  
+  background-color: #035E7B;
+
+  color: #EEFCF8;
+  font-weight: bold;
+  text-decoration: none;
+}
