--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+/* App */
+.App{
+  background-image: #ffffff;
+  height: 100vh;
+}
+
+/* Quikly Center Everything In Div */
+.cfb{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  /* background-image: url('./bromo.jpg'); */
+}
+
 /* Container Styling */
 .Container{
   position: relative; 
@@ -11,89 +27,6 @@
   border-radius: 0.5em;
 
   background-image: url('./bromo.jpg'); 
-}
-
-/* Form Side of Container */
-.form-side{
-  position: absolute;
-  z-index: 1;
-  right: 0;
-
-  border: 0.1em solid #174bb9;
-  border-radius: 0.5em;
-
-  width: 65%;
-  height: 100%;
-
-  background-color: #EEFCF8;
-  opacity: 1;
-
-  font-weight: bold;
-  color: #035E7B;
-
-  transition: 2s;
-}
-
-/* App */
-.App{
-  background-image: #ffffff;
-  height: 100vh;
-}
-
-.cfb{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Layout styling of forms, labels, inputs */
-.form-comp{
-  flex-direction: column;
-}
-
-.sign-up-form{
-  width: 50%;
-  flex-direction: column;
-}
-
-.sign-up-form > label{
-  padding: 0.5em; 
-  width: 100%
-}
-
-
-.sign-up-form > label > input{
-  width: 100%
-}
-
-/* All Inputs Styling */
-input {
-  padding: 0.5em;
-  border: 1px solid #035E7B;
-  border-radius: 5em;
-}
-
-/* All Buttons Styling */
-button {
-  padding: 1em;
-
-  border: 1px solid #EEFCF8;
-  border-radius: 5em;
-  
-  background-color: #035E7B;
-
-  color: #EEFCF8;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-button:focus {
-  outline: 0;
-}
-
-button:hover{
-  opacity: 0.9;
 }
 
 /* Banner Side of Container */
@@ -119,6 +52,27 @@ button:hover{
   transition: 2s;
 }
 
+/* Form Side of Container */
+.form-side{
+  position: absolute;
+  z-index: 1;
+  right: 0;
+
+  border: 0.1em solid #174bb9;
+  border-radius: 0.5em;
+
+  width: 65%;
+  height: 100%;
+
+  background-color: #EEFCF8;
+  opacity: 1;
+
+  font-weight: bold;
+  color: #035E7B;
+
+  transition: 2s;
+}
+
 .send-right{
   right: 0;
 }
@@ -128,3 +82,51 @@ button:hover{
 }
 
 
+/* Layout styling of forms, labels, inputs */
+.form-comp{
+  flex-direction: column;
+}
+
+.sign-up-form{
+  width: 50%;
+  flex-direction: column;
+}
+
+.sign-up-form > label{
+  padding: 0.5em;
+  width: 100%
+}
+
+.sign-up-form > label > input{
+  width: 100%
+}
+
+
+/* All Buttons Styling */
+button {
+  padding: 1em;
+
+  border: 1px solid #EEFCF8;
+  border-radius: 5em;
+  
+  background-color: #035E7B;
+
+  color: #EEFCF8;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+button:focus {
+  outline: 0;
+}
+
+button:hover{
+  opacity: 0.9;
+}
+
+/* All Inputs Styling */
+input {
+  padding: 0.5em;
+  border: 1px solid #035E7B;
+  border-radius: 5em;
+}
